<resources>
    <string name="app_name">AndroidNewTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories_fragment">Categories Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="vendors_fragment">Vendors Fragment</string>
    <string name="wishlists_fragment">WishLists Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="vendors">Vendors</string>
    <string name="wishlists">WishLists</string>
    <string name="profile">Profile</string>
    <string name="your_location">Your Location</string>
    <string name="change">CHANGE</string>
    <string name="men">Men</string>
    <string name="put_wings_on_your_dreams">Put Wings On Your Dreams</string>
    <string name="newest_products">NEWEST PRODUCTS</string>
    <string name="show_all">Show All</string>
    <string name="half_sleeve_dress">Half Sleeve Dress</string>
    <string name="leona_wilson">LEONA WILSON</string>
    <string name="_11_06_2019">11.06.2019</string>
    <string name="top_sales">Top Sales</string>
    <string name="search_hint">Search Products by name…</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try Again</string>

</resources>