<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/categories"
        android:title="@string/categories" />

    <item
        android:id="@+id/vendorsFragment"
        android:icon="@drawable/vendors"
        android:title="@string/vendors" />

    <item
        android:id="@+id/wishlistsFragment"
        android:icon="@drawable/wishlists"
        android:title="@string/wishlists" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile"
        android:title="@string/profile" />


</menu>